# parquet-pages

./: .gitignore  Dockerfile  Makefile  NOTICE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: 1.parquet  2.parquet
parquet_pages/: __init__.py  __main__.py  utils.py
src/parquet_pages/: __init__.py  __main__.py  tui.py  utils.py
tests/: test_read_parquet_metadata.py
