[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parquet-pages"
version = "0.4.0"
description = "parse parquet metadata including page headers"
authors = [{name="Anosrep Enilno"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "thrift>=0.22",
    "textual>=8.1.1",
]

[project.urls]
Repository = "https://github.com/anosrepenilno/parquet-pages"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
parquet_pages = ["parquet.thrift"]